@@ -78,6 +78,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
     for reporting the inconsistency.  (Closes: #899125)
   * d/changelog: Retroactively add Closes for LP bug #1766102 in 11.2
     release.
+  * Dh_Lib.pm: Correct control parser to permit zero or more leading
+    space after the "Section" field (instead of "exactly one" space).
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
